# ImagingProjects

./: .gitignore  HEIC_to_JPG.py
ImagingAdjusters/: README.md  pyproject.toml
ImagingAdjusters/src/: HEIC_to_JPG.py  ImageReorder.py
