[project]
name = "WebCemImagingAdjusters"
version = "0.0.1"
authors = [
  { name="Josh McAlpin", email="josh.mcalpin@webcemeteries.com" },
]
description = "A small file reorganization package"
readme = "README.md"
requires-python = ">=3.12.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/j-hurricane/ImagingProjects"
Issues = "https://github.com/j-hurricane/ImagingProjects/issues"